Fix: routes and documentation improvement
